WIP on optimization

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 /target
+
+
+
+# 🦀 Rust is Awesome! My Learning Journey 🚀
+# Just finished upgrading my TCP server project from single-threaded to multi-threaded with graceful shutdown! 🎉 Now it can render HTML, CSS, JavaScript, and images smoothly. 🖥️🎨
+# The Rust documentation is truly awesome! 📚👏 It made the learning process so much easier, even with Rust's steep learning curve. 📈
+# Some highlights of my journey:
+
+# Started with a basic single-threaded server 🧵
+# Learned about concurrency in Rust 🔀
+# Implemented multi-threading for better performance 🚄
+# Added graceful shutdown for clean exits 🚪
+# Mastered serving static files (HTML, CSS, JS, images) 🗂️
+
+# I'm making more and more progress every day, and I'm excited to keep pushing forward! 💪 Rust's performance and safety features are mind-blowing. 🤯
+# The learning curve is steep, but so worth it! 🏔️ Every challenge overcome feels like a real achievement. 🏆
+
+# Rust is not just a language; it's a whole new way of thinking about programming. 🧠💡
+
+# Who else is on a Rust learning journey? Let's connect and share experiences! 🤝
+# #RustLang #WebDevelopment #LearningToCode #ProgrammingJourney #RustProgramming #TechLearning
